<resources>
    <string name="app_name">SmartHome</string>

    <string name="title_section_main">Mainfragment</string>
    <string name="title_section_ledwall">LED-Wall</string>
    <string name="title_section_control">Gerätesteuerung</string>
    <string name="title_section3">Section 3</string>

    <string name="menu_quit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_ip">Settings</string>
    <string name="activity_edit_settings_title">Edit Settings</string>
    <string name="txt_homematic_ip">IP-Adresse der Homematic:</string>
    <string name="bt_ok">OK</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_send_by_gcm">Send by GCM</string>
    <string name="tv_temperature_out">29,7°</string>
    <string name="bt_txt_refresh">Refresh</string>
    <string name="txt_date_time_default">Samstag 8. August 2015 10:34</string>

    <string name="tagRainToday">tag_rainToday</string>
    <string name="tagHmPowerMeter">tag_hmPowerMeter</string>
    <string name="tagtemperatureOut">tag_temperatureOut</string>
    <string name="tagAirPressure">tag_airPressure</string>
    <string name="tagHmTemperatureOut">tag_hmTemperatureOut</string>
    <string name="tagHumidityOut">tag_humidityOut</string>
    <string name="tagRainCounterAll">tag_rainCounterAll</string>
    <string name="tagWindSpeed">tag_windSpeed</string>
    <string name="tagWindDirection">tag_windDirection</string>
    <string name="tagBrightness">tag_brightness</string>
    <string name="tagSunshineDuration">tag_sunshineDuration</string>
    <string name="tagTemperatureLivingRoom">tag_temperatureLivingRoom</string>
    <string name="tagHumidityLivingRoom">tag_humidityLivingRoom</string>
    <string name="tagTemperatureCellar">tag_temperatureCellar</string>
    <string name="tagHumidityCellar">tag_humidityCellar</string>
    <string name="tagGardenWater">tag_gardenWater</string>
    <string name="txt_out">Aus</string>
    <string name="txt_ledwalltext">Text für Ledwall:</string>
    <string name="txt_color_changer">Farblichtwechsler</string>
    <string name="txt_brightness">Helligkeit:</string>
    <string name="txt_default_info_text">Standardinformation</string>
    <string name="txt_fix_text_ledwall">Fixer Text für Ledwall</string>
    <string name="txt_ok">OK</string>
    <string name="tv_power_meter">999W</string>

</resources>
