<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_action_ip"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_ip"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_quit"
        app:showAsAction="always" />
</menu>